k8s/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: swiftjourney
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: saitewasreset/swiftjourney-backend:v0.1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: backend-data
              mountPath: /instance
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: backend-data
          persistentVolumeClaim:
            claimName: backend-data
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: swiftjourney
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
