k8s/base/db-order.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-order
  namespace: swiftjourney
spec:
  serviceName: db-order
  replicas: 1
  selector:
    matchLabels:
      app: db-order
  template:
    metadata:
      labels:
        app: db-order
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-data-order
---
apiVersion: v1
kind: Service
metadata:
  name: db-order
  namespace: swiftjourney
spec:
  selector:
    app: db-order
  ports:
    - port: 5432
      targetPort: 5432
