k8s/base/dish.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dish
  namespace: swiftjourney
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dish
  template:
    metadata:
      labels:
        app: dish
    spec:
      containers:
        - name: dish
          image: saitewasreset/swiftjourney-dish:v0.1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "256Mi" }
          volumeMounts:
            - name: init-data
              mountPath: /init_data
          ports: [{ containerPort: 8080 }, { containerPort: 23333 }]
          readinessProbe:
            {
              tcpSocket: { port: 8080 },
              initialDelaySeconds: 5,
              periodSeconds: 10,
            }
          livenessProbe:
            {
              tcpSocket: { port: 8080 },
              initialDelaySeconds: 15,
              periodSeconds: 20,
            }
      volumes:
        - name: init-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dish
  namespace: swiftjourney
spec:
  selector: { app: dish }
  ports:
    [
      { name: http, port: 8080, targetPort: 8080 },
      { name: internal, port: 23333, targetPort: 23333 },
    ]
