k8s/base/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: swiftjourney
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: saitewasreset/swiftjourney-order:v0.1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "256Mi" }
          ports: [{ containerPort: 8080 }, { containerPort: 23333 }]
          readinessProbe: { tcpSocket: { port: 8080 }, initialDelaySeconds: 5, periodSeconds: 10 }
          livenessProbe: { tcpSocket: { port: 8080 }, initialDelaySeconds: 15, periodSeconds: 20 }
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: swiftjourney
spec:
  selector: { app: order }
  ports:
    [
      { name: http, port: 8080, targetPort: 8080 },
      { name: internal, port: 23333, targetPort: 23333 },
    ]
